[gd_scene load_steps=22 format=2]

[ext_resource path="res://v2/core/TileMap.tres" type="TileSet" id=1]
[ext_resource path="res://sprites/sprites.png" type="Texture" id=2]
[ext_resource path="res://v2/core/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://v2/core/ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://v2/ui/playerUI/PlayerUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://v2/core/safeArea/SafeArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://v2/MainScene.gd" type="Script" id=7]
[ext_resource path="res://fonts/forced square/forced_square_big.tres" type="DynamicFont" id=8]
[ext_resource path="res://fonts/forced square/forced_square_small.tres" type="DynamicFont" id=9]
[ext_resource path="res://theme/MainTheme.tres" type="Theme" id=10]
[ext_resource path="res://sfx/go.wav" type="AudioStream" id=11]
[ext_resource path="res://sfx/ready.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/game.wav" type="AudioStream" id=13]
[ext_resource path="res://music/BattleTheme.ogg" type="AudioStream" id=14]
[ext_resource path="res://v2/core/camera/MyCamera.tscn" type="PackedScene" id=15]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.588235 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.784314 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GameLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_results"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GameSFX:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../BattleMusic:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ReadyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GoLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ReadyLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GoLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.19, 1.56 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GoLabel:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.16, 1.26, 1.36, 1.46 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 67 ), Vector2( 20, 97 ), Vector2( 5, 77 ), Vector2( 0, 82 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.16 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_movement"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ReadySFX:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GoSFX:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.18 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("MatchResults/Background:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MatchResults/WinnerTextContainer/SmallText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MatchResults/WinnerTextContainer/WinnerName:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MatchResults/WinnerTextContainer/WinnerName:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MatchResults/TryAgainButton:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 323, 179 ), Vector2( 207, 179 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameLabel:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MatchResults/TryAgainButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="MainScene" type="Node2D"]
pause_mode = 2
script = ExtResource( 7 )

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="SlowMoTween" type="Tween" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Player1UI" parent="GUI" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -67.0
margin_top = 4.0
margin_right = 9.0
margin_bottom = 31.0

[node name="Player2UI" parent="GUI" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.37656
margin_top = 4.30299
margin_right = 63.3766
margin_bottom = 26.303

[node name="MatchUI" type="MarginContainer" parent="GUI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyLabel" type="Label" parent="GUI/MatchUI"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 87.0
margin_right = 320.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 8 )
text = "READY?"
align = 1
valign = 1
uppercase = true

[node name="GoLabel" type="Label" parent="GUI/MatchUI"]
visible = false
modulate = Color( 1, 1, 1, 0.972973 )
margin_top = 87.0
margin_right = 320.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 8 )
text = "GO!"
align = 1
valign = 1
uppercase = true

[node name="GameLabel" type="Label" parent="GUI/MatchUI"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 87.0
margin_right = 320.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 8 )
text = "game!"
align = 1
valign = 1
uppercase = true

[node name="MatchResults" type="Control" parent="GUI/MatchUI"]
margin_right = 320.0
margin_bottom = 208.0

[node name="Background" type="ColorRect" parent="GUI/MatchUI/MatchResults"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerTextContainer" type="VBoxContainer" parent="GUI/MatchUI/MatchResults"]
anchor_left = 0.328
anchor_top = 0.562
anchor_right = 1.0
anchor_bottom = 0.808
margin_left = 0.0399933
margin_top = 0.103989
margin_bottom = -0.0640106
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SmallText" type="Label" parent="GUI/MatchUI/MatchResults/WinnerTextContainer"]
margin_right = 215.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 9 )
text = "And the winner is..."
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerName" type="Label" parent="GUI/MatchUI/MatchResults/WinnerTextContainer"]
visible = false
modulate = Color( 1, 1, 1, 0.2 )
margin_top = 17.0
margin_right = 215.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 8 )
text = "Player 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="GUI/MatchUI/MatchResults"]
visible = false
anchor_left = 0.647
anchor_top = 0.861
anchor_right = 1.003
anchor_bottom = 0.957
margin_left = 115.96
margin_top = -0.0879974
margin_right = 116.04
margin_bottom = -0.0559845
theme = ExtResource( 10 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 9 )
text = "Try again >>>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/MatchUI"]
autoplay = "init"
anims/end_game = SubResource( 4 )
anims/init = SubResource( 5 )
anims/show_results = SubResource( 6 )

[node name="ReadySFX" type="AudioStreamPlayer" parent="GUI/MatchUI"]
pause_mode = 2
stream = ExtResource( 12 )
bus = "Voice"

[node name="GoSFX" type="AudioStreamPlayer" parent="GUI/MatchUI"]
pause_mode = 2
stream = ExtResource( 11 )
pitch_scale = 1.1
bus = "Voice"

[node name="GameSFX" type="AudioStreamPlayer" parent="GUI/MatchUI"]
pause_mode = 2
stream = ExtResource( 13 )
bus = "Voice"

[node name="Backgound" type="Sprite" parent="."]
position = Vector2( 160, 104 )
scale = Vector2( 26, 17 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 5

[node name="SafeArea" parent="." instance=ExtResource( 6 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 2
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 1, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 2, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 1, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 1, 0, 5, 2, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 2, 0, 12, 0, 0, 13, 2, 0, 14, 1, 0, 15, 0, 0, 16, 1, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 131071, 0, 0, 65536, 0, 0, 65555, 0, 0, 65556, 1, 0, 196607, 0, 0, 131072, 0, 0, 131091, 2, 0, 131092, 1, 0, 262143, 1, 0, 196608, 0, 0, 196627, 2, 0, 196628, 1, 0, 327679, 0, 0, 262144, 1, 0, 262163, 2, 0, 262164, 0, 0, 393215, 0, 0, 327680, 0, 0, 327699, 2, 0, 327700, 0, 0, 458751, 1, 0, 393216, 0, 0, 393235, 1, 0, 393236, 2, 0, 524287, 1, 0, 458752, 0, 0, 458771, 1, 0, 458772, 0, 0, 589823, 1, 0, 524288, 1, 0, 524307, 2, 0, 524308, 1, 0, 655359, 0, 0, 589824, 1, 0, 589843, 0, 0, 589844, 1, 0, 720895, 1, 0, 655360, 0, 0, 655379, 2, 0, 655380, 0, 0, 786431, 1, 0, 720896, 0, 0, 720915, 2, 0, 720916, 0, 0, 851967, 1, 0, 786432, 1, 0, 786433, 0, 0, 786434, 0, 0, 786435, 1, 0, 786436, 0, 0, 786437, 2, 0, 786438, 0, 0, 786439, 1, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 1, 0, 786445, 1, 0, 786446, 2, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 2, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0 )

[node name="Player1" parent="." groups=[
"player1",
] instance=ExtResource( 3 )]
modulate = Color( 1, 0.219608, 0.568627, 1 )
position = Vector2( 270, 100 )

[node name="Player2" parent="." groups=[
"player2",
] instance=ExtResource( 3 )]
modulate = Color( 0, 1, 0.972549, 1 )
position = Vector2( 50, 100 )
ui_name = "P2"
tag = "player2"
up_action = "up_2"
down_action = "down_2"
left_action = "left_2"
right_action = "right_2"
a_action = "a_2"

[node name="Ball1" parent="." groups=[
"player2",
] instance=ExtResource( 4 )]
modulate = Color( 1, 0.219608, 0.568627, 1 )
position = Vector2( 240, 100 )
contacts_reported = 1
contact_monitor = true

[node name="Ball2" parent="." groups=[
"player1",
] instance=ExtResource( 4 )]
modulate = Color( 0, 1, 0.972549, 1 )
position = Vector2( 80, 100 )
contacts_reported = 1
contact_monitor = true

[node name="MyCamera" parent="." instance=ExtResource( 15 )]
[connection signal="pressed" from="GUI/MatchUI/MatchResults/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="defeated" from="Player1" to="." method="_on_Player1_defeated"]
[connection signal="initialized" from="Player1" to="GUI/Player1UI" method="_on_Player_initialized"]
[connection signal="stat_changed" from="Player1" to="GUI/Player1UI" method="_on_Player_stat_changed"]
[connection signal="defeated" from="Player2" to="." method="_on_Player2_defeated"]
[connection signal="initialized" from="Player2" to="GUI/Player2UI" method="_on_Player_initialized"]
[connection signal="stat_changed" from="Player2" to="GUI/Player2UI" method="_on_Player_stat_changed"]
